로그인 페이지 기본 요구사항 구현

--- a/login/styles.css
+++ b/login/styles.css
@@ -159,8 +159,10 @@ body {
   right: 2.4rem;
 }
 
-/* loginButtn */
-.loginButtn {
+/* loginButton */
+.loginButton {
+  cursor: pointer;
+  border: none;
   width: 100%;
   height: 5.6rem;
   padding: 1.6rem 12.4rem 1.6rem 12.4rem;
@@ -177,7 +179,7 @@ body {
   filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 15%));
 }
 
-.loginButtn:hover {
+.loginButton:hover {
   background-color: var(--mainColor);
 }
 
