fix: 로그인 페이지 텝 인덱스 수정

--- a/styles/login.css
+++ b/styles/login.css
@@ -63,6 +63,7 @@
 }
 
 .login-box {
+  /* height: 290px; */
   height: 342px;
   display: flex;
   flex-direction: column;
@@ -252,7 +253,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -100%);
   font-size: 1.6rem;
 }
 
