fix: 메인페이지 섹션별 클래스명 변경

--- a/styles/media_query.css
+++ b/styles/media_query.css
@@ -4,23 +4,23 @@
     transform: scale(75%);
     transform-origin: center bottom;
   }
-  .sc2_box {
+  .popular_box {
     transform: scale(75%);
     transform-origin: center;
   }
-  .sc3_box {
+  .search_box {
     transform: scale(75%);
     transform-origin: center;
   }
-  .sc4_box {
+  .register_box {
     transform: scale(75%);
     transform-origin: center;
   }
-  .sc5_box {
+  .we_are_box {
     transform: scale(75%);
     transform-origin: center bottom;
   }
-  .section1, .section2, .section3, .section4, .section5 {
+  .hero-section, .popular-products, .search-section, .register-product, .we_are {
     /* height: calc(540px - (540 * 10%)); */
     height: calc(540px - 108px);
   }
@@ -31,34 +31,32 @@
     transform: scale(60%);
     transform-origin: center bottom;
   }
-  .sc2_box {
+  .popular_box {
     transform: scale(60%);
     transform-origin: center;
   }
-  .sc3_box {
+  .search_box {
     transform: scale(60%);
     transform-origin: center;
   }
-  .sc4_box {
+  .register_box {
     transform: scale(60%);
     transform-origin: center;
   }
-  .section5 {
+  .we_are {
     margin-top: 0;
   }
-  .sc5_box {
+  .we_are_box {
     transform: scale(60%);
     transform-origin: center bottom;
   }
   .nav, .footer_box {
     padding: 0 10%;
   }
-  /* .section1, .section2, .section3, .section4, .section5 {
-    height: 50%;
-  } */
-  .sc2_p > span,
-  .sc3_p > span,
-  .sc4_p > span {
+
+  .popular_p > span,
+  .search_p > span,
+  .register_p > span {
     font-size: 2.4rem;
   }
 
@@ -77,7 +75,7 @@
 }
 
 @media (width <= 768px) {
-  .section1, .section5 {
+  .hero-section, .we_are {
     position: relative;
   }
   .sc1_box {
@@ -91,28 +89,28 @@
     transform: scale(50%);
     transform-origin: center bottom;
   }
-  .sc2_box {
+  .popular_box {
     height: 800px;
     flex-direction: column-reverse;
     justify-content: space-around;
     transform: scale(50%);
     transform-origin: center;
   }
-  .sc3_box {
+  .search_box {
     height: 800px;
     flex-direction: column;
     justify-content: space-around;
     transform: scale(50%);
     transform-origin: center;
   }
-  .sc4_box {    
+  .register_box {    
     height: 800px;
     flex-direction: column-reverse;
     justify-content: space-around;
     transform: scale(50%);
     transform-origin: center;
   }
-  .sc5_box {
+  .we_are_box {
     height: 600px;
     width: 400px;
     flex-direction: column;
@@ -123,9 +121,9 @@
     transform: scale(50%);
     transform-origin: center bottom;
   }
-  .sc2_p > span,
-  .sc3_p > span,
-  .sc4_p > span {
+  .popular_p > span,
+  .search_p > span,
+  .register_p > span {
     font-size: 3rem;
   }
 
