--- a/styles/media_query.css
+++ b/styles/media_query.css
@@ -1,57 +1,66 @@
-/* 미디어쿼리 */
-@media (width <= 1440px) {
-  .sc1_box {
-    transform: scale(75%);
+/* PC 스타일: 1200px 이상 */
+@media (min-width: 1200px) and (max-width: 1440px){
+  .hero_box {
+    transform: scale(0.75);
     transform-origin: center bottom;
   }
   .popular_box {
-    transform: scale(75%);
+    transform: scale(0.75);
     transform-origin: center;
   }
   .search_box {
-    transform: scale(75%);
+    transform: scale(0.75);
     transform-origin: center;
   }
   .register_box {
-    transform: scale(75%);
+    transform: scale(0.75);
     transform-origin: center;
   }
   .we_are_box {
-    transform: scale(75%);
+    transform: scale(0.75);
     transform-origin: center bottom;
   }
   .hero-section, .popular-products, .search-section, .register-product, .we_are {
-    /* height: calc(540px - (540 * 10%)); */
     height: calc(540px - 108px);
   }
 }
 
-@media (width <= 1024px) {
-  .sc1_box {
-    transform: scale(60%);
+/* Tablet 스타일: 744px 이상 ~ 1199px 이하 */
+@media (min-width: 744px) and (max-width: 1199px) {
+  .hero_box {
+    transform: scale(0.6);
     transform-origin: center bottom;
   }
   .popular_box {
-    transform: scale(60%);
+    transform: scale(0.6);
     transform-origin: center;
+  }
+  .popular_p {
+    min-width: 275px;
   }
   .search_box {
-    transform: scale(60%);
+    transform: scale(0.6);
     transform-origin: center;
   }
+  .search_p {
+    min-width: 317px;
+  }
   .register_box {
-    transform: scale(60%);
+    transform: scale(0.6);
     transform-origin: center;
+  }
+  .register_p {
+    min-width: 336px;
   }
   .we_are {
     margin-top: 0;
   }
   .we_are_box {
-    transform: scale(60%);
+    transform: scale(0.6);
     transform-origin: center bottom;
   }
   .nav, .footer_box {
-    padding: 0 10%;
+    padding: 0 100px;
   }
 
   .popular_p > span,
@@ -61,7 +70,7 @@
   }
 
   .header-inner > .logo {
-    transform: scale(85%);
+    transform: scale(0.85);
     transform-origin: center;
   }
 
@@ -72,13 +81,31 @@
   .header-inner > .logo {
     margin-top: 75px;
   }
+  .hero-section, .popular-products, .search-section, .register-product, .we_are {
+    height: calc(540px - 40%);
+  }
+  .coming-soon {
+    font-size: 4rem;
+  }
 }
 
-@media (width <= 768px) {
+/* Mobile 스타일: 375px 이상 ~ 743px 이하 */
+@media (min-width: 375px) and (max-width: 743px) {
+  .nav, .footer_box {
+    padding: 0 40px;
+  }
   .hero-section, .we_are {
     position: relative;
+    height: calc(540px - 180px);
   }
-  .sc1_box {
+  .we_are {
+    margin-top: 0;
+  }
+  .popular-products, .search-section, .register-product {
+    height: calc(540px - 100px);
+    border-bottom: 1px solid rgba(0, 0, 0, .3);
+  }
+  .hero_box {
     height: 600px;
     width: 400px;
     flex-direction: column;
@@ -86,28 +113,28 @@
     align-items: center;
     position: absolute;
     bottom: 0;
-    transform: scale(50%);
+    transform: scale(0.5);
     transform-origin: center bottom;
   }
   .popular_box {
     height: 800px;
     flex-direction: column-reverse;
     justify-content: space-around;
-    transform: scale(50%);
+    transform: scale(0.5);
     transform-origin: center;
   }
   .search_box {
     height: 800px;
     flex-direction: column;
     justify-content: space-around;
-    transform: scale(50%);
+    transform: scale(0.5);
     transform-origin: center;
   }
   .register_box {    
     height: 800px;
     flex-direction: column-reverse;
     justify-content: space-around;
-    transform: scale(50%);
+    transform: scale(0.5);
     transform-origin: center;
   }
   .we_are_box {
@@ -118,7 +145,104 @@
     align-items: center;
     position: absolute;
     bottom: 0;
-    transform: scale(50%);
+    transform: scale(0.5);
+    transform-origin: center bottom;
+  }
+  .popular_p > span,
+  .search_p > span,
+  .register_p > span {
+    font-size: 3rem;
+  }
+  .header-inner > .logo {
+    transform: scale(0.7);
+    transform-origin: center;
+    margin-top: 0;
+  }
+  .login-header, .signup-header {
+    margin-bottom: 1px;
+  }
+  .coming-soon {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .footer_box {
+    height: 100px;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+}
+
+
+/* 375px 미만에 대한 스타일은 고려하지 않음 */
+@media (max-width: 374px) {
+  .nav, .footer_box {
+    padding: 0 20px;
+  }
+  .logo_title {
+    display: none;
+  }
+  .login {
+    width: 68px;
+  }
+  .hero-section, .we_are {
+    position: relative;
+    height: calc(540px - 180px);
+  }
+  .we_are {
+    margin-top: 0;
+  }
+  .popular-products, .search-section, .register-product {
+    height: calc(540px - 100px);
+    border-bottom: 1px solid rgba(0, 0, 0, .3);
+  }
+  .hero_box {
+    height: 600px;
+    width: 400px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    transform: scale(0.5);
+    transform-origin: center bottom;
+  }
+  .hero_img1, .sc5_img5, .popular_box > img, .search_box > img, .register_box > img {
+    transform: scale(0.6);
+    transform-origin: center bottom;
+  }
+  .popular_box {
+    height: 800px;
+    flex-direction: column-reverse;
+    justify-content: space-around;
+    transform: scale(0.5);
+    transform-origin: center;
+  }
+  .search_box {
+    height: 800px;
+    flex-direction: column;
+    justify-content: space-around;
+    transform: scale(0.5);
+    transform-origin: center;
+  }
+  .register_box {    
+    height: 800px;
+    flex-direction: column-reverse;
+    justify-content: space-around;
+    transform: scale(0.5);
+    transform-origin: center;
+  }
+  .we_are_box {
+    height: 600px;
+    width: 400px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    transform: scale(0.5);
     transform-origin: center bottom;
   }
   .popular_p > span,
@@ -128,7 +252,7 @@
   }
 
   .header-inner > .logo {
-    transform: scale(70%);
+    transform: scale(0.7);
     transform-origin: center;
   }
 
@@ -138,5 +262,8 @@
 
   .header-inner > .logo {
     margin-top: 40px;
+  }
+  .coming-soon {
+    font-size: 3rem;
   }
 }
