--- a/팬더마켓/login/login.css
+++ b/팬더마켓/login/login.css
@@ -1,12 +1,5 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css");
-
-
-:root{
-    --input-bg-color:#F3F4F6;
-    --btn-bg-color:#9CA3AF;
-    --simplelogin-bg-color:#E6F2FF;
-    --primary-100-color:#3692FF;
-}
+@import url(../root.css);
 
 html{
     font-size:10px;
@@ -21,15 +14,9 @@ html{
 
 .email{
     margin-right: 37rem;
-    width: 93%;
-    padding:1.6rem 2.4rem;
-    border-radius: 1.2rem;
     font-weight: 400;
     font-family: pretendard;
-    font-size: 1.6rem;
     color: #000000;
-    background-color:var(--input-bg-color);
-    border:none;
 }
 
 .text{
@@ -74,30 +61,13 @@ input:focus{
     align-items: center;
 }
 
-.pw{
-    background-image: url(../images/social/btn_visibility_off.png);
-    background-repeat: no-repeat;
-    background-position: 96% center;
-    padding: 1.6rem 2.4rem;
-    margin-right: 37rem;
-    width: 93%;
-    border-radius: 1.2rem;
-    font-weight: 400;
-    font-family: pretendard;
-    font-size: 1.6rem;
-    color: #000000;
-    background-color:var(--input-bg-color); 
-    padding: 1.6rem 2.4rem;
-    border: none;
-}
-
 .flex{
     width: 10rem;
     display: flex;
     justify-content: space-between;
 }
 
-button{
+.loginbtn{
     width: 100%;
     border-radius: 4rem;
     padding: 1.2rem 10rem;
@@ -108,8 +78,24 @@ button{
     border: none;
 }
 
-button:focus{
+.loginbtn:focus{
     background-color: var(--primary-100-color);
+}
+
+.password-toggle{
+    border: none;
+    position: absolute;
+    right: 24px;
+}
+
+.wrap-pw{
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.wrap{
+    width: 93%;
 }
 
 .log{
@@ -126,6 +112,7 @@ button:focus{
 
 .invalid{
     border: 1px solid red;
+    border-radius: 12px;
 }
 
 .outline{
@@ -181,6 +168,24 @@ button:focus{
     margin-top: 1rem;
     transform: translate(50%, 150%);
 }
+
+.input{
+    margin-bottom: 24px;
+    display: block;
+    margin-bottom: 16px;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.input input {
+    padding: 16px 24px;
+    background-color: var(--input-bg-color);
+    border: none;
+    border-radius: 12px;
+    font-size: 16px;
+    line-height: 24px;
+    width: 100%;
+  }
 
 
 
