--- a/팬더마켓/signup/signup.css
+++ b/팬더마켓/signup/signup.css
@@ -55,6 +55,10 @@ html{
     color: var(--primary-100-color);
 }
 
+input:focus{
+    outline-color: var(--primary-100-color);
+}
+
 .email{
     padding: 1.6rem 2.4rem;
     margin-right: 37rem;
@@ -116,7 +120,7 @@ html{
     border: none;
 }
 
-button:focus{
+.btn:focus{
     background-color: var(--primary-100-color);
 }
 
