--- a/팬더마켓/signup/signup.css
+++ b/팬더마켓/signup/signup.css
@@ -80,6 +80,13 @@ input:focus{
     right: 24px;
 }
 
+.password-toggle2{
+    border: none;
+    position: absolute;
+    right: 24px;
+}
+
+
 
 .nickname{
     padding: 1.6rem 2.4rem;
