feat: update show-password button's style, function

--- a/src/styles/base/layout.css
+++ b/src/styles/base/layout.css
@@ -109,6 +109,9 @@
 .pr-6 {
   padding-right: var(--padding-6);
 }
+.pr-12 {
+  padding-right: var(--padding-12);
+}
 .pl-8 {
   padding-left: var(--padding-8);
 }
