fix: 모달창 반응형 사이즈 수정

--- a/styles/login.css
+++ b/styles/login.css
@@ -237,6 +237,8 @@
 
 .modal-content > p {
   position: absolute;
+  width: 250px;
+  text-align: center;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -100%);
