--- a/react-psh-sprint5/src/css/Num.css
+++ b/react-psh-sprint5/src/css/Num.css
@@ -18,7 +18,7 @@
     border: 1px solid #E5E7EB;
     background-color: white;
     font-size: 16px;
-    font-weight: 600;
+    font-weight: bold;
     line-height: 26px;
 }
 
@@ -26,4 +26,5 @@
     background-color: #2F80ED;
     color : white;
     cursor: pointer;
+    transition: 0.5s;
 }
