--- a/sprint5/src/components/Header.css
+++ b/sprint5/src/components/Header.css
@@ -1,3 +1,10 @@
+:root {
+  --mainColor: #3692FF;
+}
+
+html {
+  font-size: 10px;
+}
 
 nav {
   position: sticky;
@@ -16,8 +23,9 @@ nav {
 
 #navContent {
   height: 5.1rem;
-  width: 100%;
+  width: 1279rem;
   min-width: 74.4rem;
+  margin: 20rem;
   display: flex;
   justify-content: space-between;
 }
@@ -27,11 +35,12 @@ Img {
   height: 5.1rem;
 }
 
-#textBox{
+#textBox {
   display: flex;
   align-items: center;
-  position:absolute;
-  left: 37rem;
+  position: absolute;
+  left: 58rem;
+  bottom: 0.6rem;
 }
 
 .text {
@@ -43,15 +52,14 @@ Img {
   margin-right: 1.5rem;
 }
 
-.text > a {
+.text>a {
   text-decoration: none;
   color: #4B5563;
 }
 
 #loginButtn {
   text-decoration: none;
-  min-width: 12.8rem;
-  height: 4.8rem;
+  width: 5.8rem;
   border-radius: 0.8rem;
   background-color: var(--mainColor);
   display: flex;
