--- a/sprint5/src/components/Header.css
+++ b/sprint5/src/components/Header.css
@@ -9,6 +9,7 @@ html {
 nav {
   position: sticky;
   height: 7rem;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,9 +23,8 @@ nav {
 
 #navContent {
   height: 5.1rem;
-  width: 1279rem;
+  width: 100%;
   min-width: 74.4rem;
-  margin: 20rem;
   display: flex;
   justify-content: space-between;
 }
@@ -38,8 +38,8 @@ Img {
   display: flex;
   align-items: center;
   position: absolute;
-  left: 58rem;
-  bottom: 0.6rem;
+  left: 37rem;
+  min-width: 20.1rem;
 }
 
 .text {
@@ -58,7 +58,8 @@ Img {
 
 #loginButtn {
   text-decoration: none;
-  width: 5.8rem;
+  min-width: 12.8rem;
+  height: 4.8rem;
   border-radius: 0.8rem;
   background-color: var(--mainColor);
   display: flex;
@@ -70,4 +71,8 @@ Img {
   border-radius: 8px;
   padding: 11.5px 23px;
   filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 15%));
+}
+
+#loginButtn:hover {
+  background-color: #3ee4d7;
 }
